<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.AddExersize">

    <Button
        android:id="@+id/plus2"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#2196F3"
        android:onClick="plusTwo"
        android:text="+"
        app:layout_constraintLeft_toRightOf="@id/repsET"
        app:layout_constraintStart_toEndOf="@+id/minus2"
        app:layout_constraintTop_toBottomOf="@+id/repsET">

    </Button>

    <Button
        android:id="@+id/minus2"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#2196F3"
        android:onClick="minusTwo"
        android:text="-"
        app:layout_constraintLeft_toRightOf="@id/repsET"
        app:layout_constraintStart_toEndOf="@+id/setsET"
        app:layout_constraintTop_toBottomOf="@+id/repsET">

    </Button>

    <Button
        android:id="@+id/plus3"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#2196F3"
        android:onClick="plusThree"
        android:text="+"
        app:layout_constraintLeft_toRightOf="@id/weightET"
        app:layout_constraintStart_toEndOf="@+id/minus3"
        app:layout_constraintTop_toBottomOf="@+id/setsET">

    </Button>

    <Button
        android:id="@+id/minus3"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#2196F3"
        android:onClick="minusThree"
        android:text="-"
        app:layout_constraintLeft_toRightOf="@id/repsET"
        app:layout_constraintStart_toEndOf="@+id/weightET"
        app:layout_constraintTop_toBottomOf="@+id/setsET">

    </Button>

    <EditText
        android:id="@+id/exersizeNameET"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="50dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/round"
        android:backgroundTint="#cae9ff"
        android:ems="10"
        android:hint="  Name"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/repsET"
        android:layout_width="241dp"
        android:layout_height="47dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="50dp"
        android:background="@drawable/round"
        android:backgroundTint="#cae9ff"
        android:ems="10"
        android:hint="  Number of Reps"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exersizeNameET" />


    <Button
        android:id="@+id/plus1"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#2196F3"
        android:onClick="plusOne"
        android:text="+"
        app:layout_constraintLeft_toRightOf="@id/repsET"
        app:layout_constraintStart_toEndOf="@+id/minus1"
        app:layout_constraintTop_toBottomOf="@+id/exersizeNameET">

    </Button>

    <Button
        android:id="@+id/minus1"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginLeft="8dp"


        android:layout_marginTop="52dp"
        android:backgroundTint="#2196F3"
        android:onClick="minusOne"
        android:text="-"
        app:layout_constraintLeft_toRightOf="@id/repsET"
        app:layout_constraintTop_toBottomOf="@+id/exersizeNameET">

    </Button>

    <EditText
        android:id="@+id/setsET"
        android:layout_width="241dp"

        android:layout_height="46dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="50dp"
        android:background="@drawable/round"
        android:backgroundTint="#cae9ff"
        android:ems="10"
        android:hint="  Number of Sets"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repsET" />

    <EditText
        android:id="@+id/weightET"
        android:layout_width="240dp"

        android:layout_height="45dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="50dp"
        android:background="@drawable/round"
        android:backgroundTint="#cae9ff"
        android:ems="10"
        android:hint="  Weight"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setsET" />

    <Button

        android:id="@+id/finishAddBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#F37851"
        android:ems="10"
        android:hint="  Add"
        android:onClick="add"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightET" />

    <ImageButton
        android:id="@+id/voiceBtn"
        android:layout_width="75dp"
        android:layout_height="67dp"
        android:layout_marginTop="36dp"
        android:onClick="SpeakBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishAddBtn"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />


</androidx.constraintlayout.widget.ConstraintLayout>