<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipelayout"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="CURRENT EXERSIZES"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:id="@+id/top"
                android:layout_marginHorizontal="50dp"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textStyle="bold"

                />

            <ScrollView
                android:id="@+id/scrol"
                android:layout_width="match_parent"
                android:layout_height="516dp"
                android:layout_below="@id/top"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="516dp"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/exersizesTV1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        
                        android:textColor="@color/black"
                        android:textSize="20dp" />


                </LinearLayout>

            </ScrollView>


            <Button
                android:id="@+id/addExersise1"
                android:layout_width="271dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/scrol"
                android:layout_centerInParent="true"
                android:layout_marginTop="25dp"
                android:backgroundTint="#F37851"
                android:onClick="addExerise"
                android:text="Add Exerise"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/workoutnameET"
                android:layout_width="253dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="22dp"
                android:background="@drawable/round"
                android:backgroundTint="#cae9ff"
                android:ems="10"
                android:hint="Workout Name"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/finishworkoutBTN1"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20dp"
                android:layout_toRightOf="@id/workoutnameET"
                android:backgroundTint="#F37851"
                android:onClick="addBtnFunc"
                android:text="ADD"
                android:textColor="@color/black" />


        </RelativeLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>