<resources>
    <string name="app_name">FinalProject</string>
    <string name="username">username</string>
    <string name="title_activity_progress">progress</string>
    <string name="tab_text_1">Workout</string>
    <string name="tab_text_2">History</string>
    <string name="tab_text_3">Progress</string>
    <string name="tab_text_4">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="BAD_LONG_String">THIS NAME IS TOO LONG XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
</resources>