<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Signup">

    <Button
        android:id="@+id/signupBTN2"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="#F37851"
        android:onClick="gologin"
        android:text="Go To login"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBTN"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/fullnameET"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/round"
        android:backgroundTint="#cae9ff"
        android:ems="10"
        android:hint="  Name"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round"
        android:backgroundTint="#cae9ff"
        android:ems="10"
        android:hint="  Email"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullnameET" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round"
        android:backgroundTint="#cae9ff"
        android:ems="10"
        android:hint="  User Name"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <EditText
        android:id="@+id/passwordET"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round"
        android:backgroundTint="#cae9ff"
        android:ems="10"
        android:hint="  Password"
        android:inputType="textPassword"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameET" />

    <Button
        android:id="@+id/signupBTN"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="41dp"
        android:backgroundTint="#F37851"
        android:onClick="signup"
        android:text="Sign Up"
        android:textSize="12dp"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET"
        app:layout_constraintVertical_bias="0.076" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="184dp"
        android:layout_marginTop="43dp"
        android:src="@drawable/myfitlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>