...
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET"
        app:layout_constraintVertical_bias="0.261" />

    <Button
        android:id="@+id/signinBTN"
        android:layout_width="369dp"
        android:layout_height="41dp"
        android:backgroundTint="#F37851"
        android:onClick="signin"
        android:text="Sign In"
        android:textSize="12dp"
...
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/usernamesET"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/round"
        android:backgroundTint="#cae9ff"
        android:ems="10"
...
