...
        android:onClick="finishWorkout"
        android:text="Finish Workout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startworkoutBTN" />

    <Button
        android:id="@+id/addExersise1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="364dp"
        android:onClick="addExerise"
        android:text="Add Exerise"
...
